Linker flags with hints about packages