@@ -31,7 +31,6 @@ import com.gluonhq.substrate.Constants;
 import com.gluonhq.substrate.model.ClassPath;
 import com.gluonhq.substrate.model.InternalProjectConfiguration;
 import com.gluonhq.substrate.model.ProcessPaths;
-import com.gluonhq.substrate.target.LinuxFlavor.LINUX_FLAVOR;
 import com.gluonhq.substrate.util.FileOps;
 import com.gluonhq.substrate.util.Logger;
 import com.gluonhq.substrate.util.Version;
@@ -53,7 +52,6 @@ public class LinuxTargetConfiguration extends PosixTargetConfiguration {
 
     private static final Version COMPILER_MINIMAL_VERSION = new Version(6);
     private static final Version LINKER_MINIMAL_VERSION = new Version(2, 26);
-    private static final LINUX_FLAVOR linuxFlavor = new LinuxFlavor().getFlavor();
 
     private static final List<String> linuxLibs = Arrays.asList("z", "dl", "stdc++", "pthread");
 
@@ -61,20 +59,12 @@ public class LinuxTargetConfiguration extends PosixTargetConfiguration {
             "java", "nio", "zip", "net", "prefs", "jvm", "strictmath", "j2pkcs11", "sunec", "extnet", "libchelper"
     );
 
-    private static final List<String> linuxfxlibs = Arrays.asList( "-Wl,--whole-archive",
+    private static final List<String> linuxfxlibs = List.of(
+    		"-Wl,--whole-archive",
             "-lprism_es2", "-lglass", "-lglassgtk3", "-ljavafx_font",
             "-ljavafx_font_freetype", "-ljavafx_font_pango", "-ljavafx_iio",
-            "-ljfxmedia", "-lfxplugins", "-lavplugin",
-            "-Wl,--no-whole-archive", "-lGL", "-lX11","-lgtk-3", "-lgdk-3",
-            "-lpangocairo-1.0", "-lpango-1.0", "-latk-1.0",
-            "-lcairo-gobject", "-lcairo", "-lgdk_pixbuf-2.0",
-            "-lgio-2.0", "-lgobject-2.0", "-lglib-2.0", "-lfreetype",
-            "-lpangoft2-1.0", "-lgstreamer-lite",
-            "-lgthread-2.0", "-lstdc++", "-lz", "-lXtst",
-            "-lavcodec", "-lavformat", "-lavutil",
-            "-lasound", "-lm", "-lgmodule-2.0"
-    );
-
+            "-ljfxmedia", "-lfxplugins", "-lavplugin");
+            
     private String[] capFiles = {"AArch64LibCHelperDirectives.cap",
             "AMD64LibCHelperDirectives.cap", "BuiltinDirectives.cap",
             "JNIHeaderDirectives.cap", "LibFFIHeaderDirectives.cap",
@@ -122,28 +112,14 @@ public class LinuxTargetConfiguration extends PosixTargetConfiguration {
         answer.add("-rdynamic");
         if (!useJavaFX) return answer;
         
-        String gtkConfigName = linuxFlavor.isDebNaming() ? "gtk+-3.0" : "gtk+";
-        String gthreadConfigName = linuxFlavor.isDebNaming() ? "gthread-2.0" : "gthread";
-
-        ProcessBuilder process = new ProcessBuilder("pkg-config", "--libs", gtkConfigName, gthreadConfigName, "xtst");
-        process.redirectErrorStream(true);
-        try {
-            Process start = process.start();
-            InputStream is = start.getInputStream();
-            start.waitFor();
-            BufferedReader br = new BufferedReader(new InputStreamReader(is));
-            String line;
-            while ((line = br.readLine()) != null) {
-                Logger.logInfo("[SUB] " + line);
-            }
-        } catch (IOException | InterruptedException e) {
-            e.printStackTrace();
-        }
-
         answer.addAll(linuxfxlibs);
         if (usePrismSW) {
             answer.addAll(linuxfxSWlibs);
         }
+
+        answer.addAll(new LinuxLinkerFlags().getLinkerFlags());
+        
+        Logger.logInfo("[Link flags] " + answer);
         return answer;
     }
 
